tests/API/negative/TC-LGN-02.robot
*** Settings ***
Resource  ../../../resources/keywords/api_keywords.robot

*** Test Cases ***
TC-API-LGN-02
    [Documentation]  Logging In With Invalid Credentials
    Logging In With Invalid Credentials